# CNLIB-Chat

./: .gitignore  CMakeLists.txt  Chat.sln  README.md  Read Me.txt  Rules.txt  SymLinks.cmd  ToDo.txt  WNLIB-Chat.code-workspace  build_vs13.cmd  build_vs15.cmd  vcpkg.json
CNLIB_Tests/: CMakeLists.txt  test_file.cpp
Client/: CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters  FileTransfer.cpp  FileTransfer.h  Logs.h  Options.cpp  Options.h  Resource.rc  StdAfx.h  TCPClient.cpp  TCPClient.h  Whiteboard.cpp  Whiteboard.h  Windows.cpp  authenticatedialog.cpp  authenticatedialog.h  authenticatedialog.ui  clientinfo.cpp  clientinfo.h  connectdialog.cpp  connectdialog.h  connectdialog.ui  imginfo.cpp  imginfo.h  invitewhiteboarddialog.cpp  invitewhiteboarddialog.h  invitewhiteboarddialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  manageserversdialog.cpp  manageserversdialog.h  manageserversdialog.ui  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  readlogdialog.cpp  readlogdialog.h  readlogdialog.ui  (+12 more)
Common/: CMakeLists.txt  CircularBuffer.h  ColorDef.h  DebugHelper.h  File.cpp  File.h  Format.h  HeapAlloc.h  Messages.h  MessagesExt.h  Mouse.cpp  Mouse.h  MsgStream.h  Palette.cpp  Palette.h  Socket.cpp  Socket.h  Stdafx.h  TextDisplay.h  Timer.cpp  Timer.h  Typedefs.h  UPNP.cpp  UPNP.h  Vec2.h  WhiteboardClientData.cpp  WhiteboardClientData.h  WinFirewall.cpp  WinFirewall.h
Common/CNLIB/: BufSize.h  BuffAllocator.h  BuffSendInfo.cpp  BuffSendInfo.h  BufferOptions.h  CompressionTypes.h  CritLock.h  File.h  HeapAlloc.h  IOCP.h  IPV.h  Includes.h  KeepAlive.h  MemPool.h  Messages.h  MsgHeader.h  MsgStream.h  OverlappedExt.h  Ping.h  Socket.h  SocketInfo.cpp  SocketInfo.h  SocketListen.h  SocketOptions.h  StreamAllocInterface.h  StreamExt.h  TCPClientInterface.h  TCPServInterface.h  Typedefs.h  UPNP.h  WSABufExt.h
Common/CNLIB/Docs/: Documentation.doc  Getting Started.txt  ~$cumentation.doc  ~WRL0001.tmp
Common/DLLSRC/: File.cpp  Socket.cpp  TCPClient.cpp  TCPClient.h  TCPServ.h  UPNP.cpp
Common/zlib/lib/x32/: zdll.lib
Common/zlib/lib/x64/: zdll.lib
Licenses/: QT.txt
MyUtils/: CMakeLists.txt  DragStringListModel.cpp  DragStringListModel.h  FuncUtils.h  whiteboardargs.h
Server/: CMakeLists.txt  PaintBrush.cpp  PaintBrush.h  Ping.cpp  Ping.h  Resource.rc  Server.filters  Server.vcxproj  Server.vcxproj.filters  StdAfx.cpp  StdAfx.h  TCPServ.cpp  TCPServ.h  Tool.cpp  Tool.h  Whiteboard.cpp  Whiteboard.h  Windows.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manageadminsdialog.cpp  manageadminsdialog.h  manageadminsdialog.ui  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  resource.h  serverinfo.cpp  serverinfo.h  whiteboard.cpp  whiteboard.h
TCPCS/: BuffAllocator.cpp  CMakeLists.txt  Documentation.doc  License.txt  StdAfx.h  TCPCS.vcxproj  TCPCS.vcxproj.filters
TCPCS/DLLSRC/: BufSendAlloc.cpp  BufSendAlloc.h  BuffSendInfo.cpp  BufferOptions.cpp  CritLock.cpp  File.cpp  HeapAlloc.cpp  IOCP.cpp  InterlockedCounter.h  KeepAlive.cpp  KeepAlive.h  MsgStream.cpp  OverlappedExt.h  Ping.cpp  RecvHandler.cpp  RecvHandler.h  RecvObserverI.h  Socket.cpp  SocketInfo.cpp  SocketListen.cpp  SocketOptions.cpp  TCPClient.cpp  TCPClient.h  TCPServ.cpp  TCPServ.h  Typedefs.cpp  UPNP.cpp  VerifyPing.cpp  VerifyPing.h  WSABufExt.h
UNICODE/: TCPCS.exp  TCPCS.lib
